--- a/apuestas_front_tmp/src/app/components/movil/login/login.component.html
+++ b/apuestas_front_tmp/src/app/components/movil/login/login.component.html
@@ -1,22 +1,28 @@
 <main class="form-signin w-100 m-auto">
-  <form>
-   <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+  <form [formGroup]="formLogin">
+   <h1 class="h3 mb-3 fw-normal">Introduce tus datos</h1>
 
     <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-      <label for="floatingInput">Email address</label>
+      <input type="text" class="form-control" formControlName="userIn">
+      <label for="userIn">Usuario</label>
     </div>
     <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-      <label for="floatingPassword">Password</label>
+      <input
+        type="password"
+        class="form-control"
+        formControlName="passwordIn"
+        [ngClass]="{'is-invalid': f.passwordIn.invalid && statusSubmited}"
+      >
+      <label for="passwordIn">Password</label>
     </div>
 
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+    <button
+      class="w-100 btn btn-lg btn-primary"
+      type="submit"
+      (click)="login()"
+    >
+        Entrar
+    </button>
     <p class="mt-5 mb-3 text-muted">&copy; ViR2aL</p>
   </form>
 </main>
