--- a/apuestas_front_tmp/src/app/components/movil/layout/header/header.component.html
+++ b/apuestas_front_tmp/src/app/components/movil/layout/header/header.component.html
@@ -6,26 +6,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Apuestas
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <a [routerLink]="['/movil/apuestas/crear']" class="nav-link">Crear apuesta</a>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li><a class="dropdown-item" href="#" (click)="cerrarSesion()">Cerrar sesión</a></li>
       </ul>
     </div>
   </div>
