--- a/apuestas_front_tmp/src/app/components/movil/apuestas/crear/crear.component.html
+++ b/apuestas_front_tmp/src/app/components/movil/apuestas/crear/crear.component.html
@@ -3,7 +3,7 @@
 
       <div class="col-md-7 col-lg-8">
         <h4 class="mb-3">Crear Apuesta</h4>
-        <form [formGroup]="formApuesta">
+        <form [formGroup]="formApuesta" (ngSubmit)="crearApuesta()" novalidate="">
           <div class="row g-3">
             <div class="col-sm-4">
               <label for="fechaEventoIn" class="form-label">Fecha Evento</label>
@@ -12,22 +12,57 @@
 
             <div class="col-sm-4">
               <label for="eventoIn" class="form-label">Evento</label>
-              <input type="text" class="form-control" formControlName="eventoIn">
+              <input
+                type="text"
+                class="form-control"
+                formControlName="eventoIn"
+                id="eventoIn"
+                [ngClass]="{'is-invalid': (f['eventoIn'].errors && statusSubmited)}"
+                oninput="javascript:this.value=this.value.toUpperCase();"
+              >
+              <div *ngIf="f['eventoIn'].errors?.required && statusSubmited" class="invalid-feedback">
+                El evento es necesario.
+              </div>
             </div>
 
             <div class="col-sm-4">
               <label for="apuestaIn" class="form-label">Apuesta</label>
-              <input type="text" class="form-control" formControlName="apuestaIn">
+              <input
+                type="text"
+                class="form-control"
+                formControlName="apuestaIn"
+                id="apuestaIn"
+                [ngClass]="{'is-invalid': (f['apuestaIn'].errors && statusSubmited)}"
+                oninput="javascript:this.value=this.value.toUpperCase();"
+              >
+              <div *ngIf="f['apuestaIn'].errors?.required && statusSubmited" class="invalid-feedback">
+                La apuesta es necesaria.
+              </div>
             </div>
 
             <div class="col-sm-6">
               <label for="encuentroIn" class="form-label">Encuentro</label>
-              <input type="text" class="form-control" formControlName="encuentroIn">
+              <input
+                type="text"
+                class="form-control"
+                formControlName="encuentroIn"
+                id="encuentroIn"
+                [ngClass]="{'is-invalid': (f['encuentroIn'].errors && statusSubmited)}"
+                oninput="javascript:this.value=this.value.toUpperCase();"
+              >
+              <div *ngIf="f['encuentroIn'].errors?.required && statusSubmited" class="invalid-feedback">
+                El encuentro es necesario.
+              </div>
             </div>
 
             <div class="col-sm-6">
               <label for="comentarioIn" class="form-label">Comentario</label>
-              <input type="text" class="form-control" formControlName="comentarioIn">
+              <input
+                type="text"
+                class="form-control"
+                formControlName="comentarioIn"
+                oninput="javascript:this.value=this.value.toUpperCase();"
+              >
             </div>
 
             <div class="col-md-4">
@@ -46,6 +81,7 @@
                 <option value="11">Tenis Mesa</option>
                 <option value="12">JM Pro</option>
                 <option value="13">Apuesta Segura</option>
+                <option value="14">Apuestas Manager</option>
               </select>
             </div>
 
@@ -65,23 +101,52 @@
                 <option value="3">Rugby</option>
                 <option value="4">Tenis</option>
                 <option value="5">Tenis Mesa</option>
+                <option value="6">E-Sport</option>
+                <option value="5">Varios</option>
                 <option value="99">Desconocido</option>
               </select>
             </div>
 
             <div class="col-sm-4">
               <label for="stakeIn" class="form-label">Stake</label>
-              <input type="text" class="form-control" formControlName="stakeIn">
+              <input
+                type="text"
+                class="form-control"
+                formControlName="stakeIn"
+                id="stakeIn"
+                [ngClass]="{'is-invalid': (f['stakeIn'].errors && statusSubmited)}"
+              >
+              <div *ngIf="f['stakeIn'].errors?.required && statusSubmited" class="invalid-feedback">
+                El stake es necesario.
+              </div>
             </div>
 
             <div class="col-sm-4">
               <label for="cuotaIn" class="form-label">Cuota</label>
-              <input type="text" class="form-control" formControlName="cuotaIn">
+              <input
+                type="text"
+                class="form-control"
+                formControlName="cuotaIn"
+                id="cuotaIn"
+                [ngClass]="{'is-invalid': (f['cuotaIn'].errors && statusSubmited)}"
+              >
+              <div *ngIf="f['cuotaIn'].errors?.required && statusSubmited" class="invalid-feedback">
+                La cuota es necesaria.
+              </div>
             </div>
 
             <div class="col-sm-4">
               <label for="cantidadApostadaIn" class="form-label">Cantidad Apostada</label>
-              <input type="text" class="form-control" formControlName="cantidadApostadaIn">
+              <input
+                type="text"
+                class="form-control"
+                formControlName="cantidadApostadaIn"
+                id="cantidadApostadaIn"
+                [ngClass]="{'is-invalid': (f['cantidadApostadaIn'].errors && statusSubmited)}"
+              >
+              <div *ngIf="f['cantidadApostadaIn'].errors?.required && statusSubmited" class="invalid-feedback">
+                La cantidad apostada es necesaria.
+              </div>
             </div>
 
           </div>
@@ -105,7 +170,7 @@
 
           <hr class="my-4">
 
-          <button class="w-100 btn btn-primary btn-lg" type="submit" (click)="crearApuesta()">Crear apuesta</button>
+          <button class="w-100 btn btn-primary btn-lg" type="submit">Crear apuesta</button>
         </form>
       </div>
     </main>
