--- a/apuestas_front_tmp/src/app/components/movil/dashboard/dashboard.component.html
+++ b/apuestas_front_tmp/src/app/components/movil/dashboard/dashboard.component.html
@@ -26,7 +26,7 @@
         </button>
         <button
           class="btn btn-secondary me-2"
-          (click)="actualizarEstadoApuesta(apuesta.id,4)"
+          (click)="push(apuesta.id)"
         >
          Push
         </button>
@@ -35,4 +35,30 @@
 
   </div>
 
+</div>
+
+
+<div class="modal" tabindex="-1" id="pushCantidadDialog" >
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Introduce la cantidad del push</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <label for="cantidadPushIn" class="form-label">Cantidad Push </label>
+        <input
+          type="text"
+          class="form-control"
+          id="cantidadPushIn"
+          #cantidadPushIn
+        >
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-primary" (click)="cerrarPushCantidadDialog(cantidadPushIn.value)">Guardar</button>
+        <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Cancelar</button>
+      </div>
+    </div>
+  </div>
 </div>
